[project]
name = "esphome-rf433-mqtt-bridge"
version = "1.2.0"
description = "ESPHome MQTT firmware for scheduled RF433 transmission and opt-in AOK reception"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S101",    # pytest asserts
    "S603",    # subprocess without shell is the point of the native test
    "COM812",  # formatter-managed
]

[tool.pytest.ini_options]
testpaths = ["tests"]
